# grvmodel

./: .RData  .Rhistory  .gitignore  Jupyter Notebook (pytorch).lnk  Pictures - Shortcut.lnk  Python - Shortcut.lnk  README.md  Untitled.ipynb  cmd.exe.lnk  filter.Rmd  filter.nb.html  input-layer-form.ipynb  link_getter.py  masterfile.csv  meetsold.csv  model.ipynb  notes.txt  output.csv  result_processing.ipynb  split_distance.Rmd  split_distance.nb.html  xml parser.py
python/: GRU - v6.4.2 - Copy (2).ipynb  GRU - v6.4.2 - Copy.ipynb  GRU - v7.0.0.ipynb  GRU - v7.0.1 - RL.ipynb  GRU - v7.0.1.2.ipynb  GRU - v7.0.1.ipynb  GRU - v7.0.1_gpu_batch.ipynb  GRU - v7.0.2.ipynb  GRU - v7.0.3.ipynb  GRU - v7.1.0 ensemble_pretrained.ipynb  GRU - v7.1.0 ensembleipynb.ipynb  GRU - v8.0.0 Topaz.ipynb  GRU - v8.0.0 Topaz_saver_for_second.ipynb  GRU - v8.0.0 Topaz_shuffer.ipynb  GRU - v8.0.0 Topaz_updater.ipynb  GRU - v8.0.1 Topaz.ipynb  GRU - v8.0.2 Topaz.ipynb  GRU - v8.0.3 Topaz.ipynb  GRU - v8.0.3 Topaz_quick_runner.ipynb  LSTM - v6.0.1.ipynb  LSTM - v6.0.2.ipynb  bsp.html  fulll.html  model_graph  setup.cfg  setup.py  testing.ipynb  testing_comp.ipynb  the_great_sweep.py  website_vis.ipynb  window_test_notebook.ipynb  window_testing_popout.py
python/data_tools/: Database testing.ipynb  betfair_bfsp_updater.py  data_testing.ipynb  database_update.py  database_update_polars.py  download_all_race_results.py  encoder_new  fasttrack.py  featurecreations.py  featurecreations_polars.py  mapping.py  new_form_gen.py
python/flumine/: featurecreations.py  flumine_betting.py  nohup.out  (+1 more)
(+10259 files in other folders)
