[metadata]
name = grvmodel
version = 1.0
author = Nicholas Barlow    
author_email = nickbarlow@live.com.author       
description = Pytorch method for predicting greyhound races
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = melhousing

